# Azure-Kinect-Sensor-SDK

./: CMakeLists.txt
cmake/: k4aCompilerFlags.cmake
examples/calibration_registration/: camera_tools.py
tools/: CMakeLists.txt
tools/mrob_calibration_params_extractor/: CMakeLists.txt  main.cpp
tools/mrob_images_extractor/: CMakeLists.txt  main.cpp
tools/mrob_imu_data_extractor/: CMakeLists.txt  main.c
tools/mrob_recorder/: CMakeLists.txt  main.cpp  recorder.cpp  recorder.h
tools/mrob_timestamps_extractor/: CMakeLists.txt  main.c  main.cpp
